--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -48,10 +48,10 @@
 }
 
 #trending-container img{
-    border: 1px solid red;
-    min-width: 180px;
+    width: 200px;
     border-radius: 10px;
 }
+
 #trending-container p{
     text-align: center;
     font-size: 20px;
