--- a/src/styles/moviedetails.css
+++ b/src/styles/moviedetails.css
@@ -11,11 +11,12 @@
     gap: 20px;
     justify-content: space-around;
     align-items: center;
-    border: 1px solid red;
+    padding-top: 10px;
 
 }
 #image-container{
     width: 50%;
+    min-width: 300px;
     overflow: hidden;
 }
 #image-container img{
@@ -24,19 +25,22 @@
     border-radius: 15px;
 }
 #details-container{
-    max-width: 40%;
+    width: 40%;
+    min-width: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: left;
     gap: 5px;
     padding-top: 30px;
+    
 }
 
 #details-container h5,p{
     margin-top: 0;
     margin-bottom: 10px;
     width: 100%;
+    text-align: left;
 }
 #cast-title{
     text-align: center;
@@ -48,4 +52,5 @@
     width: 100%;
     justify-content: center;
     align-items: center;
+    margin-top: 30px;
 }
